Add font adjustment and layout tweak

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 site: samuelwjlee
 url: samuelwjlee.github.io
 title: samuelwjlee
-description: thoughts documented
+description: my thoughts
 twitter:
   username: #yourusername
   card: summary
