--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 links:
-  - title: Writing
+  - title: Posts
     url: /
-  - title: Search
-    url: /search
   - title: About
     url: /about
-# - title: Rss
-#   url: /atom.xml
+  - title: Search
+    url: /search
+  - title: Rss
+    url: /atom.xml
