--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 site: samuelwjlee
 url: samuelwjlee.github.io
 title: samuelwjlee
-description: my thoughts
+description:
 twitter:
   username: #yourusername
   card: summary
